# kata

./: .memo  Cargo.toml  Makefile  README.md
e2e/: test.sh
e2e/json/all/: out.txt
e2e/json/array/data_type_mismatch_error/: err.txt  in.txt  schema.txt
e2e/json/array/object/: in.txt
e2e/json/multi_property/: in.txt
e2e/json/nested_object/: in.txt
e2e/json/primitive/boolean/: schema.txt
e2e/json/primitive/boolean_invalid/: err.txt  schema.txt
e2e/json/primitive/null/: in.txt  schema.txt
e2e/json/primitive/string_invalid/: err.txt
e2e/json/property_not_found_error/: option.txt  out.txt  schema.txt
e2e/tsv/multi_data_type_mismatch_error/: err.txt  schema.txt
e2e/tsv/multi_term_multi_column/: in.txt
e2e/tsv/multi_validation_error/: out.txt
e2e/tsv/primitive/boolean_false/: schema.txt
e2e/tsv/primitive/float_invalid/: err.txt
e2e/tsv/primitive/integer_dont_accept_float/: schema.txt
e2e/tsv/sum_type/: in.txt  schema.txt
src/: cli.rs  error.rs  json.rs  main.rs  schema.rs  tsv.rs
src/json/: data.rs  error.rs  lexer.rs  parser.rs  schema.rs  validator.rs
src/tsv/: error.rs  schema.rs  term.rs
test/: test.sh
test/json/all/: schema.txt
test/json/key_including_dash/: in.txt  out.txt  schema.txt
test/json/key_with_quotes/: out.txt  schema.txt
test/json/multi_property/: schema.txt
test/json/nested_object/: schema.txt
test/json/property_not_found_error/: err.txt
test/json/sum_type/: out.txt  schema.txt
test/tsv/field_number_mismatch_error/: err.txt  in.txt
test/tsv/multiline_schema/: option.txt  schema.txt
tests/: cli.rs
(+11 files in other folders)
