[package]
name = "schematch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde_json = "1.0.114"


[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
