[package]
name = "schematch"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Fujis <ppdx999@gmail.com>"]
description = "Declarative schema checking command"
repository = "https://github.com/ppdx999/schematch"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0"
